add colour to sunburst.html

--- a/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
+++ b/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d3267fe6a51f20d5e71c566152ed70e2034e9b9a5cef0956f5d1fb7e398568eb"
+  "signature": "sha256:e5c9d4708d646e40d08fc375f31b3bad79bc6ad3b41450156937d6bcb3a44e91"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -231,7 +231,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -480,7 +480,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 40
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -492,7 +492,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 133
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -507,12 +507,551 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\u001b[31mclusters.py\u001b[m\u001b[m                  energy.json.buf              energy_consumption_vis.ipynb \u001b[31msunburst.html\u001b[m\u001b[m                test.py\r\n",
-        "energy.json                  energy_consumption_vis.html  font.otf                     test.ipynb\r\n"
+        "\u001b[31mclusters.py\u001b[m\u001b[m                  energy.json.buf              energy_consumption_vis.ipynb index.html                   test.ipynb\r\n",
+        "energy.json                  energy_consumption_vis.html  font.otf                     \u001b[31msunburst.html\u001b[m\u001b[m                test.py\r\n"
        ]
       }
      ],
-     "prompt_number": 179
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in xrange(3):\n",
+      "    for j in xrange(7):\n",
+      "        for k in xrange(24):\n",
+      "            myJson[i]['children'][j]['children'][k]['colours'] = colors[i]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in xrange(3):\n",
+      "    for j in xrange(7):\n",
+      "        for k in xrange(24):\n",
+      "             print myJson[i]['children'][j]['children'][k]['colours']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FFEE99\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF9922\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n",
+        "#FF4422\n"
+       ]
+      }
+     ],
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -593,13 +1132,53 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "days_and_time = np.zeros([7, 24])\n",
+      "for day in np.arange(0,7,1):\n",
+      "    for time in np.arange(0,24,1):\n",
+      "        days_and_time[day][time]=dataFrame.ix[(dataFrame.Energy.weekday == day) & (dataFrame.index.hour == time)].mean()\n",
+      "    \n",
+      "fig, ax = plt.subplots(figsize=(16,6))\n",
+      "cMap = ListedColormap([colors[0],colors[1],colors[2]])\n",
+      "heatmap = ax.pcolor(days_and_time, cmap=cMap,edgecolors='w')\n",
+      "cbar = plt.colorbar(heatmap)\n",
+      "cbar.ax.get_yaxis().set_ticks([])\n",
+      "\n",
+      "for j, lab in enumerate(['low','medium','high']):\n",
+      "    cbar.ax.text(.5, (2 * j + 1) / 6.0, lab, ha='center', va='center', rotation=90)\n",
+      "cbar.ax.get_yaxis().labelpad = 15\n",
+      "cbar.ax.set_ylabel('Clustering of Energy Consumption', rotation=90)\n",
+      "\n",
+      "ax.set_xticks(np.arange(days_and_time.shape[1])+0.5, minor=False)\n",
+      "ax.set_yticks(np.arange(days_and_time.shape[0])+0.5, minor=False)\n",
+      "    \n",
+      "ax.invert_yaxis()\n",
+      "ax.xaxis.tick_top()\n",
+      "ax.axis('tight')\n",
+      "ax.set_xticklabels(np.arange(0,24,1), minor=False)\n",
+      "ax.set_yticklabels(myDays, minor=False)\n",
+      "plt.xlabel('Time')\n",
+      "plt.ylabel('Day of the week')\n",
+      "plt.text(0.5, 1.08, 'Relationship of Energy Consumption between time and day of the week*',\n",
+      "        horizontalalignment='center',\n",
+      "        fontsize=18,\n",
+      "        transform = ax.transAxes)\n",
+      "plt.show()\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "with open('energy.json', 'w') as outfile:\n",
       "    json.dump(myJson, outfile, sort_keys=True, indent=True)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 190
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -610,7 +1189,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 175
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -621,7 +1200,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -635,13 +1214,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 26,
        "text": [
         "(0, '')"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
