revise ipynb and html

--- a/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
+++ b/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e5c9d4708d646e40d08fc375f31b3bad79bc6ad3b41450156937d6bcb3a44e91"
+  "signature": "sha256:655cd52bb99ec038c21fe0868829ece8717a5904a33f015ef00d6f5d9b37061d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -521,537 +521,12 @@
       "for i in xrange(3):\n",
       "    for j in xrange(7):\n",
       "        for k in xrange(24):\n",
-      "            myJson[i]['children'][j]['children'][k]['colours'] = colors[i]"
+      "            myJson[i]['children'][j]['children'][k]['colour'] = colors[i]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "for i in xrange(3):\n",
-      "    for j in xrange(7):\n",
-      "        for k in xrange(24):\n",
-      "             print myJson[i]['children'][j]['children'][k]['colours']"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FFEE99\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF9922\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n",
-        "#FF4422\n"
-       ]
-      }
-     ],
-     "prompt_number": 28
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -1178,7 +653,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
