--- a/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
+++ b/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:404a0cf158995978bdff3556bcdfd9e6f86ef12fec0f061ab519e9a3767b568a"
+  "signature": "sha256:9b8275f9c79938723fa64ea9cd0a9baa9a91dd6011706bf4f9e095de532342ca"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -774,7 +774,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Reference"
+      "References"
      ]
     },
     {
@@ -783,7 +783,7 @@
      "source": [
       "<ol>\n",
       "    <li>https://github.com/camenergydatalab/EnergyDataSimulationChallenge/tree/master/challenge2/analysis/kmnmy<a href=\"https://github.com/camenergydatalab/EnergyDataSimulationChallenge/tree/master/challenge2/analysis/kmnmy\" /></li>\n",
-      "    <li>http://www.jasondavies.com/coffee-wheel/<a href=\"http://www.jasondavies.com/coffee-wheel/\" /></li>\n",
+      "    <li>coffee-wheel<a href=\"http://www.jasondavies.com/coffee-wheel/\" /></li>\n",
       "    <li>Programming Collective Intelligence<a href=\"http://www.oreilly.co.jp/books/9784873113647/\" /></li>\n",
       "</ol>"
      ]
